main = files('main.cpp')
main_test = files('main-test.cpp')

gevolution_sources = files([
    'background.cpp',
    'debugger.cpp',
    'gevolution.cpp',
    'hibernation.cpp',
    'ic_basic.cpp',
    'ic_prevolution.cpp',
    'ic_read.cpp',
    'newtonian_pm.cpp',
    'output.cpp',
    'parser.cpp',
    'Particles_gevolution.cpp',
    'radiation.cpp',
    'tools.cpp',
    'velocity.cpp',
    'metadata.cpp',
    'lightcone.cpp'
    ])

