gevolution_headers = files([
    'background.hpp',
    'class_tools.hpp',
    'debugger.hpp',
    'gevolution.hpp',
    'hibernation.hpp',
    'ic_basic.hpp',
    'ic_prevolution.hpp',
    'ic_read.hpp',
    'metadata.hpp',
    'newtonian_pm.hpp',
    'output.hpp',
    'parser.hpp',
    'Particles_gevolution.hpp',
    'prng_engine.hpp',
    'radiation.hpp',
    'real_type.hpp',
    'tools.hpp',
    'velocity.hpp'
    ])
