config=configure_file(
    input: 'config.h.in', 
    output: 'config.h',
    configuration: conf_data)
    
gevolution_headers = files([
    'particle_mesh.hpp',
    'background.hpp',
    'class_tools.hpp',
    'debugger.hpp',
    'gevolution.hpp',
    'hibernation.hpp',
    'ic_basic.hpp',
    'ic_prevolution.hpp',
    'ic_read.hpp',
    'metadata.hpp',
    'newtonian_pm.hpp',
    'gr_pm.hpp',
    'output.hpp',
    'parser.hpp',
    'Particles_gevolution.hpp',
    'power.hpp',
    'prng_engine.hpp',
    'radiation.hpp',
    'basic_types.hpp',
    'tools.hpp',
    'velocity.hpp',
    'final_action.hpp',
    'lightcone.hpp'
    ])
